[gd_scene load_steps=8 format=3 uid="uid://0kd1tlo6iqlk"]

[ext_resource type="Script" path="res://Scripts/Global/UI/TitleScreenUI.gd" id="1_mfamt"]
[ext_resource type="Theme" uid="uid://lit8d35pdhgt" path="res://Graphics/UI/SlicedButtonTheme.tres" id="2_lf73o"]
[ext_resource type="Texture2D" uid="uid://cvd3rexc2fp22" path="res://Graphics/UI/Covers/Game1.png" id="3_4d0pp"]
[ext_resource type="Texture2D" uid="uid://8qohbxwf87jg" path="res://Graphics/UI/Settings/SettingsButton1.png" id="4_c3x1m"]
[ext_resource type="Texture2D" uid="uid://b01efd4qfhyr5" path="res://Graphics/UI/Settings/SettingsButton3.png" id="5_hpqfq"]
[ext_resource type="Texture2D" uid="uid://bqjexstdhjrq2" path="res://Graphics/UI/Settings/SettingsButton2.png" id="6_4oyqd"]
[ext_resource type="Theme" uid="uid://b7lrgt3hlawkv" path="res://DialogueSystem/ui/ThemeRT_Header.tres" id="7_4a7nk"]

[node name="Node3D" type="Node3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 10, 0)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mfamt")
panels = Array[NodePath]([NodePath("Panel SelectGame"), NodePath("Panel PlayGame"), NodePath("Panel Settings")])

[node name="Panel SelectGame" type="TextureRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Game Selecter Button" type="Button" parent="Control/Panel SelectGame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("../Prev Button")
focus_neighbor_right = NodePath("../Next Button")
focus_neighbor_bottom = NodePath("../Quit Button")
theme = ExtResource("2_lf73o")

[node name="TextureRect" type="TextureRect" parent="Control/Panel SelectGame/Game Selecter Button"]
modulate = Color(1, 1, 1, 0.588235)
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 584.0
offset_bottom = 584.0
mouse_filter = 2
texture = ExtResource("3_4d0pp")
expand_mode = 1

[node name="Prev Button" type="Button" parent="Control/Panel SelectGame"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -32.0
offset_right = 81.0
offset_bottom = 32.0
grow_vertical = 2
focus_neighbor_right = NodePath("../Game Selecter Button")
theme = ExtResource("2_lf73o")
text = "Prev"

[node name="Next Button" type="Button" parent="Control/Panel SelectGame"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -81.0
offset_top = -32.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2
focus_neighbor_left = NodePath("../Game Selecter Button")
focus_neighbor_top = NodePath("../SettingsButton")
theme = ExtResource("2_lf73o")
text = "Next"

[node name="Quit Button" type="Button" parent="Control/Panel SelectGame"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -61.0
offset_right = 64.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_lf73o")
text = "Quit"

[node name="SettingsButton" type="TextureButton" parent="Control/Panel SelectGame"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 64.0
grow_horizontal = 0
focus_neighbor_left = NodePath("../Game Selecter Button")
focus_neighbor_bottom = NodePath("../Next Button")
texture_normal = ExtResource("4_c3x1m")
texture_pressed = ExtResource("5_hpqfq")
texture_hover = ExtResource("6_4oyqd")
texture_focused = ExtResource("6_4oyqd")

[node name="Panel PlayGame" type="TextureRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Control/Panel PlayGame"]
modulate = Color(1, 1, 1, 0.588235)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -284.0
offset_right = 284.0
offset_bottom = 568.0
grow_horizontal = 2
mouse_filter = 2
texture = ExtResource("3_4d0pp")
expand_mode = 1

[node name="Button Start" type="Button" parent="Control/Panel PlayGame"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -213.0
offset_right = 200.0
offset_bottom = -152.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_lf73o")
text = "New Game"

[node name="Button Continue" type="Button" parent="Control/Panel PlayGame"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -133.0
offset_right = 200.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_lf73o")
text = "Continue"

[node name="Button Cancel" type="Button" parent="Control/Panel PlayGame"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -61.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_lf73o")
text = "Cancel"

[node name="Panel Settings" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button SavePlayerPrefs" type="Button" parent="Control/Panel Settings"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -61.0
offset_right = 216.0
grow_vertical = 0
focus_neighbor_top = NodePath("../Button_LowerMusic")
focus_neighbor_right = NodePath("../Button Cancel")
theme = ExtResource("2_lf73o")
text = "Save and Confirm"

[node name="Button Cancel" type="Button" parent="Control/Panel Settings"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -216.0
offset_top = -61.0
grow_horizontal = 0
grow_vertical = 0
focus_neighbor_left = NodePath("../Button SavePlayerPrefs")
focus_neighbor_top = NodePath("../Button_RaiseMusic")
theme = ExtResource("2_lf73o")
text = "Cancel"

[node name="Button_LowerMaster" type="Button" parent="Control/Panel Settings"]
layout_mode = 1
offset_top = 104.0
offset_right = 64.0
offset_bottom = 168.0
focus_neighbor_right = NodePath("../Button_RaiseMaster")
focus_neighbor_bottom = NodePath("../Button_LowerSound")
theme = ExtResource("2_lf73o")
text = "-"

[node name="Button_RaiseMaster" type="Button" parent="Control/Panel Settings"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_top = 104.0
offset_bottom = 168.0
grow_horizontal = 0
focus_neighbor_left = NodePath("../Button_LowerMaster")
focus_neighbor_bottom = NodePath("../Button_RaiseSound")
theme = ExtResource("2_lf73o")
text = "+
"

[node name="VolumeMasterLabel" type="RichTextLabel" parent="Control/Panel Settings"]
layout_mode = 1
offset_left = 120.0
offset_top = 104.0
offset_right = 954.0
offset_bottom = 168.0
theme = ExtResource("7_4a7nk")
bbcode_enabled = true
text = "[center]Master[/center]"

[node name="Button_LowerSound" type="Button" parent="Control/Panel Settings"]
layout_mode = 1
offset_top = 184.0
offset_right = 64.0
offset_bottom = 248.0
focus_neighbor_top = NodePath("../Button_LowerMaster")
focus_neighbor_right = NodePath("../Button_RaiseSound")
focus_neighbor_bottom = NodePath("../Button_LowerMusic")
theme = ExtResource("2_lf73o")
text = "-"

[node name="Button_RaiseSound" type="Button" parent="Control/Panel Settings"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_top = 184.0
offset_bottom = 248.0
grow_horizontal = 0
focus_neighbor_left = NodePath("../Button_LowerSound")
focus_neighbor_top = NodePath("../Button_RaiseMaster")
focus_neighbor_bottom = NodePath("../Button_RaiseMusic")
theme = ExtResource("2_lf73o")
text = "+
"

[node name="VolumeSoundLabel" type="RichTextLabel" parent="Control/Panel Settings"]
layout_mode = 1
offset_left = 120.0
offset_top = 184.0
offset_right = 954.0
offset_bottom = 248.0
theme = ExtResource("7_4a7nk")
bbcode_enabled = true
text = "[center]Sound[/center]"

[node name="Button_LowerMusic" type="Button" parent="Control/Panel Settings"]
layout_mode = 1
offset_top = 272.0
offset_right = 64.0
offset_bottom = 336.0
focus_neighbor_top = NodePath("../Button_LowerSound")
focus_neighbor_right = NodePath("../Button_RaiseMusic")
focus_neighbor_bottom = NodePath("../Button SavePlayerPrefs")
theme = ExtResource("2_lf73o")
text = "-"

[node name="Button_RaiseMusic" type="Button" parent="Control/Panel Settings"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_top = 272.0
offset_bottom = 336.0
grow_horizontal = 0
focus_neighbor_left = NodePath("../Button_LowerMusic")
focus_neighbor_top = NodePath("../Button_RaiseSound")
focus_neighbor_bottom = NodePath("../Button Cancel")
theme = ExtResource("2_lf73o")
text = "+
"

[node name="VolumeMusicLabel" type="RichTextLabel" parent="Control/Panel Settings"]
layout_mode = 1
offset_left = 120.0
offset_top = 272.0
offset_right = 954.0
offset_bottom = 336.0
theme = ExtResource("7_4a7nk")
bbcode_enabled = true
text = "[center]Music[/center]"

[node name="Header" type="RichTextLabel" parent="Control/Panel Settings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -498.0
offset_right = 498.0
offset_bottom = 88.0
grow_horizontal = 2
theme = ExtResource("7_4a7nk")
bbcode_enabled = true
text = "[center][color=cyan]SETTINGS"

[connection signal="pressed" from="Control/Panel SelectGame/Game Selecter Button" to="Control" method="_on_game_selecter_button_pressed"]
[connection signal="pressed" from="Control/Panel SelectGame/Prev Button" to="Control" method="_on_prev_button_pressed"]
[connection signal="pressed" from="Control/Panel SelectGame/Next Button" to="Control" method="_on_next_button_pressed"]
[connection signal="pressed" from="Control/Panel SelectGame/Quit Button" to="Control" method="_on_quit_button_pressed"]
[connection signal="pressed" from="Control/Panel SelectGame/SettingsButton" to="Control" method="_on_settings_button_pressed"]
[connection signal="pressed" from="Control/Panel PlayGame/Button Start" to="Control" method="_on_button_start_pressed"]
[connection signal="pressed" from="Control/Panel PlayGame/Button Continue" to="Control" method="_on_button_continue_pressed"]
[connection signal="pressed" from="Control/Panel PlayGame/Button Cancel" to="Control" method="_on_button_cancel_pressed"]
[connection signal="pressed" from="Control/Panel Settings/Button SavePlayerPrefs" to="Control" method="_on_button_save_player_prefs_pressed"]
[connection signal="pressed" from="Control/Panel Settings/Button Cancel" to="Control" method="_on_button_cancel_settings_pressed"]
[connection signal="pressed" from="Control/Panel Settings/Button_LowerMaster" to="Control" method="_on_button_lower_master_pressed"]
[connection signal="pressed" from="Control/Panel Settings/Button_RaiseMaster" to="Control" method="_on_button_raise_master_pressed"]
[connection signal="pressed" from="Control/Panel Settings/Button_LowerSound" to="Control" method="_on_button_lower_sound_pressed"]
[connection signal="pressed" from="Control/Panel Settings/Button_RaiseSound" to="Control" method="_on_button_raise_sound_pressed"]
[connection signal="pressed" from="Control/Panel Settings/Button_LowerMusic" to="Control" method="_on_button_lower_music_pressed"]
[connection signal="pressed" from="Control/Panel Settings/Button_RaiseMusic" to="Control" method="_on_button_raise_music_pressed"]
